# serializer version: 1
# name: test_custom_sentences
  dict({
    'conversation_id': <ANY>,
    'response': dict({
      'card': dict({
      }),
      'data': dict({
        'failed': list([
        ]),
        'success': list([
        ]),
        'targets': list([
        ]),
      }),
      'language': 'en-us',
      'response_type': 'action_done',
      'speech': dict({
        'plain': dict({
          'extra_data': None,
          'speech': 'You ordered a stout',
        }),
      }),
    }),
  })
# ---
# name: test_custom_sentences.1
  dict({
    'conversation_id': <ANY>,
    'response': dict({
      'card': dict({
      }),
      'data': dict({
        'failed': list([
        ]),
        'success': list([
        ]),
        'targets': list([
        ]),
      }),
      'language': 'en-us',
      'response_type': 'action_done',
      'speech': dict({
        'plain': dict({
          'extra_data': None,
          'speech': 'You ordered a lager',
        }),
      }),
    }),
  })
# ---
